src/components/sections/Header/header.css
.hot-links {
  position: relative;
  background-color: transparent;
  min-width: 300px;
  min-height: 30px;
  margin: 10px auto 20px;
  display: flex;
  align-items: center;
}

.hot-links a {
  outline: none !important;
  margin: 10px 7px;
  display: inline-block;
  height: 20px;
  width: 20px;
  box-sizing: border-box;
  background-color: transparent;
  background-size: contain;
  background-repeat: no-repeat;
  opacity: 0.5;
  cursor: pointer;
  -webkit-transition: all 100ms linear;
  -moz-transition: all 100ms linear;
  -o-transition: all 100ms linear;
  transition: all 100ms linear;
}

.hot-links a:hover {
  opacity: 0.8;
  background-color: transparent;
}

svg {
  height: auto;
  width: auto;
}

img {
  border-radius: 100% !important;
}

#header-image::after {
  content: "";
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #ddd;
  width: 100%;
  height: 100%;
  z-index: -2;
  animation-name: outer-border-slide-out;
  animation-delay: 500ms;
  animation-duration: 200ms;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
}

#header-image::before {
  content: "";
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #fafafa;
  width: 100%;
  height: 100%;
  z-index: -1;
  animation-name: inner-border-slide-out;
  animation-delay: 500ms;
  animation-duration: 200ms;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
}

@keyframes inner-border-slide-out {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(1.04);
  }
}

@keyframes outer-border-slide-out {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(1.075);
  }
}

